--- a/content/倉儲建立.html
+++ b/content/倉儲建立.html
@@ -140,7 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='小組連結.html'>Next</a> >> 小組連結<br /><h1>倉儲建立</h1>
-<br /> <a href='小組連結.html'>Next</a> >> 小組連結</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zSRADS3GmZI" width="560"></iframe></p><br /> <a href='小組連結.html'>Next</a> >> 小組連結</div>
         
     <!-- footer -->
       <div class="container">
