--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,8 @@
+<h1>About</h1>
+<p>40923125 cd2022</p>
 <h1>倉儲建立</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zSRADS3GmZI" width="560"></iframe></p><h1>小組連結</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zSRADS3GmZI" width="560"></iframe></p>
+<h1>小組連結</h1>
 <p><span>根據 </span><a href="https://mde.tw/cd2022_guide/content/Grouping.html">https://mde.tw/cd2022_guide/content/Grouping.html</a><span>  中的 2b 程式執行, 配合<span> </span></span><a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a><span><span> </span>修改為能夠直接在頁面顯示各組員的 cd2022 倉儲與網頁連結, 以及各學員協同大分組倉儲與網頁連結 (例如: cd2022ag1).</span></p>
 <h2>建立方式</h2>
 <p>利用<a href="https://mde.tw/cd2022_guide/content/run.html">run</a>跑<a href="https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">grp_2022.py</a>,但需要更改取樣為<a href="https://mde.tw/studlist/2022spring/2a.txt">2a.txt</a>,並且調整小組之固定變數B改A</p>
