--- a/content/About.html
+++ b/content/About.html
@@ -139,9 +139,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">倉儲建立 << <a href='倉儲建立.html'>Previous</a> <a href='建立方式.html'>Next</a> >> 建立方式<br /><h1>小組連結</h1>
-<p><span>根據 </span><a href="https://mde.tw/cd2022_guide/content/Grouping.html">https://mde.tw/cd2022_guide/content/Grouping.html</a><span>  中的 2b 程式執行, 配合<span> </span></span><a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a><span><span> </span>修改為能夠直接在頁面顯示各組員的 cd2022 倉儲與網頁連結, 以及各學員協同大分組倉儲與網頁連結 (例如: cd2022ag1).</span></p>
-<br />倉儲建立 << <a href='倉儲建立.html'>Previous</a> <a href='建立方式.html'>Next</a> >> 建立方式</div>
+    <div id="tipue_search_content"> <a href='倉儲建立.html'>Next</a> >> 倉儲建立<br /><h1>About</h1>
+<p>40923125 cd2022</p>
+<br /> <a href='倉儲建立.html'>Next</a> >> 倉儲建立</div>
         
     <!-- footer -->
       <div class="container">
