--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cmsimde_site</title>
+        <title>40923125 cd2022</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -127,7 +127,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li>
                       </ul>
                 </nav>
               </div>
@@ -138,8 +138,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='小組連結.html'>Next</a> >> 小組連結<br /><h1>倉儲建立</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zSRADS3GmZI" width="560"></iframe></p><br /> <a href='小組連結.html'>Next</a> >> 小組連結</div>
+    <div id="tipue_search_content"> <a href='倉儲建立.html'>Next</a> >> 倉儲建立<br /><h1>About</h1>
+<p>40923125 cd2022</p>
+<br /> <a href='倉儲建立.html'>Next</a> >> 倉儲建立</div>
         
     <!-- footer -->
       <div class="container">
