--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cmsimde_site</title>
+        <title>40923125 cd2022</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -126,7 +126,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,4 +137,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='倉儲建立.html'>倉儲建立</a><li><a href='小組連結.html'>小組連結</a><ul><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li><a href='小組連結.html'>小組連結</a><ul><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul></section></div></body></html>
