--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -120,3 +120,7 @@ print("done")</pre>
 <h1>每周進度</h1>
 <p>W1</p>
 <p>建立IPV6連線,下載<a href="https://github.com/mdecourse/wcm2022/files/7819340/cadlab_network_setup.zip">cadlab_network_setup.zip</a>,並在被封鎖網路前執行1_ipv6_network_setup.bat啟動檔,如果成功將不會再跳出網路封鎖訊息。內建會自行將網路轉至IPV6並設定Proxy</p>
+<p>利用學校Email或於學校網路下載<a href="https://drive.google.com/file/d/17wDJd6AeMhwrOzWGO_o8afCEsFKh3Hy9/view?usp=sharing">NX1980_cd2022.7z</a>NX可攜式</p>
+<p>W2</p>
+<p>利用<a href="https://github.com/mdecourse/cmsimde">cmsimd</a>子模組建立cd2022倉儲</p>
+<p>利用<a href="https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">grp_2022.py</a>程式使用<a href="https://mde.tw/studlist/2022spring/2a.txt">2a.txt</a>表單跑出分組名單</p>
