--- a/content/w10_block_ui.html
+++ b/content/w10_block_ui.html
@@ -139,18 +139,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">結果 << <a href='結果.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui<br /><h1>每周進度</h1>
-<p>W1</p>
-<p>建立IPV6連線,下載<a href="https://github.com/mdecourse/wcm2022/files/7819340/cadlab_network_setup.zip">cadlab_network_setup.zip</a>,並在被封鎖網路前執行1_ipv6_network_setup.bat啟動檔,如果成功將不會再跳出網路封鎖訊息。內建會自行將網路轉至IPV6並設定Proxy</p>
-<p>利用學校Email或於學校網路下載<a href="https://drive.google.com/file/d/17wDJd6AeMhwrOzWGO_o8afCEsFKh3Hy9/view?usp=sharing">NX1980_cd2022.7z</a>NX可攜式</p>
-<p>W2</p>
-<p>利用<a href="https://github.com/mdecourse/cmsimde">cmsimd</a>子模組建立cd2022倉儲</p>
-<p>利用<a href="https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">grp_2022.py</a>程式使用<a href="https://mde.tw/studlist/2022spring/2a.txt">2a.txt</a>表單跑出分組名單</p>
-<p>w7</p>
-<p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
-<p>完成結果</p>
-<p><img alt="" height="509" src="./../images/w7.png" width="900"/></p>
-<br />結果 << <a href='結果.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui</div>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <br /><h1>w10_block_ui</h1>
+<script>
+var winkVideoData_w10_block_ui = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
+<source src="./../downloads/w10.mp4" type="video/mp4"/></video></div><br />每周進度 << <a href='每周進度.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
