--- a/config/content.htm
+++ b/config/content.htm
@@ -128,3 +128,17 @@ print("done")</pre>
 <p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
 <p>完成結果</p>
 <p><img alt="" height="509" src="/images/w7.png" width="900"/></p>
+<h1>w10_block_ui</h1>
+<script>
+var winkVideoData_w10_block_ui = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
+<source src="/downloads/w10.mp4" type="video/mp4"/></video></div>
