--- a/content/blog上傳wink.html
+++ b/content/blog上傳wink.html
@@ -139,10 +139,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='blog上傳wink.html'>Next</a> >> blog上傳wink<br /><h1>w10_block_ui</h1>
-<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
-<source src="./../downloads/w10.mp4" type="video/mp4"/></video></div>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='blog上傳wink.html'>Next</a> >> blog上傳wink</div>
+    <div id="tipue_search_content">w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <br /><h1>blog上傳wink</h1>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"&gt;
+&lt;script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"&gt;&lt;/script&gt;
+&lt;script&gt;
+var winkVideoData_w10_block_ui = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+&lt;/script&gt;
+&lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
+&lt;source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre>
+<p></p><br />w10_block_ui << <a href='w10_block_ui.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
