--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -129,16 +129,6 @@ print("done")</pre>
 <p>完成結果</p>
 <p><img alt="" height="509" src="/images/w7.png" width="900"/></p>
 <h1>w10_block_ui</h1>
-<script>
-var winkVideoData_w10_block_ui = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
 <source src="/downloads/w10.mp4" type="video/mp4"/></video></div>
+<h1>blog上傳wink</h1>
