--- a/reveal/index.html
+++ b/reveal/index.html
@@ -28,10 +28,14 @@
             <a href="https://revealjs.com">
                 <img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
             </a>
-            <h3>The HTML Presentation Framework</h3>
-            <p>001
-                <small>Created by <a href="http://hakim.se">Hakim El Hattab</a> and <a href="https://github.com/hakimel/reveal.js/graphs/contributors">contributors</a></small>
-            </p>
+            <h3>about</h3>
+        課程倉儲: <a href="https://github.com/40923125/cd2022">https://github.com/40923125/cd2022 </a>
+
+        內容管理: <a href="https://40923125.github.io/cd2022">https://40923125.github.io/cd2022 </a>
+
+        課程投影片: <a href="https://40923125.github.io/cd2022/reveal">https://40923125.github.io/cd2022/reveal </a>
+
+        課程網誌: <a href="https://40923125.github.io/cd2022/blog">https://40923125.github.io/cd2022/blog </a>
         <p>0123456789</p>
         </section>
 
