--- a/reveal/index.html
+++ b/reveal/index.html
@@ -29,16 +29,18 @@
                 <img src="https://static.slid.es/reveal/logo-v1/reveal-white-text.svg" alt="reveal.js logo" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
             </a>
             <h3>about</h3>
-        <p>
-        課程倉儲: <a href="https://github.com/40923125/cd2022">https://github.com/40923125/cd2022 </a>
+            <p>
+                    <small>
+                    課程倉儲: <a href="https://github.com/40923125/cd2022">https://github.com/40923125/cd2022 </a>
 
-        內容管理: <a href="https://40923125.github.io/cd2022">https://40923125.github.io/cd2022 </a>
+                    內容管理: <a href="https://40923125.github.io/cd2022">https://40923125.github.io/cd2022 </a>
 
-        課程投影片: <a href="https://40923125.github.io/cd2022/reveal">https://40923125.github.io/cd2022/reveal </a>
+                    課程投影片: <a href="https://40923125.github.io/cd2022/reveal">https://40923125.github.io/cd2022/reveal </a>
 
-        課程網誌: <a href="https://40923125.github.io/cd2022/blog">https://40923125.github.io/cd2022/blog </a>
+                    課程網誌: <a href="https://40923125.github.io/cd2022/blog">https://40923125.github.io/cd2022/blog </a>
 
-        0123456789
+                    0123456789
+                    </small>
         </p>
         </section>
 
