--- a/content/blog上傳wink.html
+++ b/content/blog上傳wink.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a><li><a href='uarm(NX).html'>uarm(NX)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <br /><h1>blog上傳wink</h1>
+    <div id="tipue_search_content">w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <a href='uarm(NX).html'>Next</a> >> uarm(NX)<br /><h1>blog上傳wink</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"&gt;
 &lt;script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"&gt;&lt;/script&gt;
 &lt;script&gt;
@@ -154,7 +154,7 @@ var winkVideoData_w10_block_ui = {
 &lt;/script&gt;
 &lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
 &lt;source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre>
-<p></p><br />w10_block_ui << <a href='w10_block_ui.html'>Previous</a> </div>
+<br />w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <a href='uarm(NX).html'>Next</a> >> uarm(NX)</div>
         
     <!-- footer -->
       <div class="container">
