--- a/content/w10_block_ui.html
+++ b/content/w10_block_ui.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a><li><a href='uarm(NX).html'>uarm(NX)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,9 +140,21 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='blog上傳wink.html'>Next</a> >> blog上傳wink<br /><h1>w10_block_ui</h1>
+<script>
+// 在 Javascript 標註內以兩個斜線加入單行註解
+// 每一個影片要有獨特的 data-varname 變數名稱
+var winkVideoData_w10_block_ui = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
-<source src="./../downloads/w10.mp4" type="video/mp4"/></video></div>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='blog上傳wink.html'>Next</a> >> blog上傳wink</div>
+<source src="./../downloads/w10.mp4" type="video/mp4"/></video></div><br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='blog上傳wink.html'>Next</a> >> blog上傳wink</div>
         
     <!-- footer -->
       <div class="container">
