--- a/content/uarm(NX).html
+++ b/content/uarm(NX).html
@@ -349,7 +349,9 @@ var winkVideoData_uarm_m13 = {
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_uarm_m13" height="100%" muted="true" width="100%">
 <source src="./../downloads/uarm_m13.mp4" type="video/mp4"/></video></div>
 <p>組合</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe>零件.組合下載</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe></p>
+<p></p>
+<p>零件.組合下載</p>
 <p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p><br />blog上傳wink << <a href='blog上傳wink.html'>Previous</a> </div>
         
     <!-- footer -->
