--- a/content/每周進度.html
+++ b/content/每周進度.html
@@ -149,10 +149,7 @@ img.add_border {
 <p>w7</p>
 <p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
 <p>完成結果</p>
-<p><img alt="" height="509" src="./../images/w7.png" width="900"/></p>
-<p>001</p>
-<p><iframe frameborder="0" height="300" src="./../downloads/.html" width="300"></iframe></p>
-<br />結果 << <a href='結果.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui</div>
+<p><img alt="" height="509" src="./../images/w7.png" width="900"/></p><br />結果 << <a href='結果.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui</div>
         
     <!-- footer -->
       <div class="container">
