--- a/config/content.htm
+++ b/config/content.htm
@@ -128,10 +128,7 @@ print("done")</pre>
 <p>w7</p>
 <p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
 <p>完成結果</p>
-<p><img alt="" height="509" src="/images/w7.png" width="900"/></p>
-<p>001</p>
-<p><iframe frameborder="0" height="300" src="/downloads/.html" width="300"></iframe></p>
-<h1>w10_block_ui</h1>
+<p><img alt="" height="509" src="/images/w7.png" width="900"/></p><h1>w10_block_ui</h1>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
 // 每一個影片要有獨特的 data-varname 變數名稱
@@ -371,5 +368,7 @@ var winkVideoData_uarm_m13 = {
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_uarm_m13" height="100%" muted="true" width="100%">
 <source src="/downloads/uarm_m13.mp4" type="video/mp4"/></video></div>
 <p>組合</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe>零件.組合下載</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe></p>
+<p></p>
+<p>零件.組合下載</p>
 <p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p>
