--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -129,8 +129,6 @@ print("done")</pre>
 <p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
 <p>完成結果</p>
 <p><img alt="" height="509" src="/images/w7.png" width="900"/></p>
-<p>001</p>
-<p><iframe frameborder="0" height="300" src="/downloads/.html" width="300"></iframe></p>
 <h1>w10_block_ui</h1>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
@@ -146,7 +144,8 @@ var winkVideoData_w10_block_ui = {
 </script>
 <!-- 將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
-<source src="/downloads/w10.mp4" type="video/mp4"/></video></div><h1>blog上傳wink</h1>
+<source src="/downloads/w10.mp4" type="video/mp4"/></video></div>
+<h1>blog上傳wink</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"&gt;
 &lt;script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"&gt;&lt;/script&gt;
 &lt;script&gt;
@@ -375,3 +374,4 @@ var winkVideoData_uarm_m13 = {
 <p></p>
 <p>零件.組合下載</p>
 <p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p>
+<h1>w3video</h1>
