--- a/content/uarm(NX).html
+++ b/content/uarm(NX).html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a><li><a href='uarm(NX).html'>uarm(NX)</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3video.html'>w3video</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">blog上傳wink << <a href='blog上傳wink.html'>Previous</a> <br /><h1>uarm(NX)</h1>
+    <div id="tipue_search_content">blog上傳wink << <a href='blog上傳wink.html'>Previous</a> <a href='w3video.html'>Next</a> >> w3video<br /><h1>uarm(NX)</h1>
 <p>軸承支撐圈</p>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
@@ -352,7 +352,8 @@ var winkVideoData_uarm_m13 = {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe></p>
 <p></p>
 <p>零件.組合下載</p>
-<p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p><br />blog上傳wink << <a href='blog上傳wink.html'>Previous</a> </div>
+<p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p>
+<br />blog上傳wink << <a href='blog上傳wink.html'>Previous</a> <a href='w3video.html'>Next</a> >> w3video</div>
         
     <!-- footer -->
       <div class="container">
