--- a/content/NXOpen Python.html
+++ b/content/NXOpen Python.html
@@ -2,7 +2,7 @@
         <head>
         <title>40923125 cd2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,9 +139,41 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">倉儲建立 << <a href='倉儲建立.html'>Previous</a> <a href='建立方式.html'>Next</a> >> 建立方式<br /><h1>小組連結</h1>
-<p><span>根據 </span><a href="https://mde.tw/cd2022_guide/content/Grouping.html">https://mde.tw/cd2022_guide/content/Grouping.html</a><span>  中的 2b 程式執行, 配合<span> </span></span><a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a><span><span> </span>修改為能夠直接在頁面顯示各組員的 cd2022 倉儲與網頁連結, 以及各學員協同大分組倉儲與網頁連結 (例如: cd2022ag1).</span></p>
-<br />倉儲建立 << <a href='倉儲建立.html'>Previous</a> <a href='建立方式.html'>Next</a> >> 建立方式</div>
+    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>NXOpen Python</h1>
+<h4>於NX內建立繪製群組</h4>
+<script>
+var w12_task = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="w12_task" height="630" muted="true" width="1008">
+<source src="./../downloads/w12_task.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<script></script>
+<h4>於NX內導入外掛程式執行</h4>
+<script>
+var w12_task2 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="w12_task2" height="630" muted="true" width="1008">
+<source src="./../downloads/w12_task2.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<script></script>
+<p>心得:</p>
+<p>當你完全了解NX這套軟體時,會發現其內部有許多可以自定義的功能,可以將編寫完成的繪製程式碼導入NX,使其執行,可免除重複零件之繪製時間。也可以透過程式碼來控制多個零件尺寸,減少所需繪製的時間。</p><br />w12 << <a href='w12.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
