--- a/content/blog_add_wink.html
+++ b/content/blog_add_wink.html
@@ -2,7 +2,7 @@
         <head>
         <title>40923125 cd2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,10 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>NXOpen Python</h1>
-<h4>於NX內建立繪製群組</h4>
-<script>
-var w12_task = {
+    <div id="tipue_search_content">w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <a href='uarm(NX).html'>Next</a> >> uarm(NX)<br /><h1>blog_add_wink</h1>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"&gt;
+&lt;script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"&gt;&lt;/script&gt;
+&lt;script&gt;
+var winkVideoData_w10_block_ui = {
   dataVersion: 1,
   frameRate: 10,
   buttonFrameLength: 5,
@@ -150,30 +151,9 @@ var w12_task = {
   frameStops: {
   },
 };
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="w12_task" height="630" muted="true" width="1008">
-<source src="./../downloads/w12_task.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<script></script>
-<h4>於NX內導入外掛程式執行</h4>
-<script>
-var w12_task2 = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="w12_task2" height="630" muted="true" width="1008">
-<source src="./../downloads/w12_task2.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<script></script>
-<p>心得:</p>
-<p>當你完全了解NX這套軟體時,會發現其內部有許多可以自定義的功能,可以將編寫完成的繪製程式碼導入NX,使其執行,可免除重複零件之繪製時間。也可以透過程式碼來控制多個零件尺寸,減少所需繪製的時間。</p><br />w12 << <a href='w12.html'>Previous</a> </div>
+&lt;/script&gt;
+&lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
+&lt;source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre><br />w10_block_ui << <a href='w10_block_ui.html'>Previous</a> <a href='uarm(NX).html'>Next</a> >> uarm(NX)</div>
         
     <!-- footer -->
       <div class="container">
