--- a/content/每周進度.html
+++ b/content/每周進度.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">結果 << <a href='結果.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui<br /><h1>每周進度</h1>
+    <div id="tipue_search_content">結果 << <a href='結果.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>每周進度</h1>
 <p>W1</p>
 <p>建立IPV6連線,下載<a href="https://github.com/mdecourse/wcm2022/files/7819340/cadlab_network_setup.zip">cadlab_network_setup.zip</a>,並在被封鎖網路前執行1_ipv6_network_setup.bat啟動檔,如果成功將不會再跳出網路封鎖訊息。內建會自行將網路轉至IPV6並設定Proxy</p>
 <p>利用學校Email或於學校網路下載<a href="https://drive.google.com/file/d/17wDJd6AeMhwrOzWGO_o8afCEsFKh3Hy9/view?usp=sharing">NX1980_cd2022.7z</a>NX可攜式</p>
@@ -150,7 +150,7 @@ img.add_border {
 <p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
 <p>完成結果</p>
 <p><img alt="" height="509" src="./../images/w7.png" width="900"/></p>
-<br />結果 << <a href='結果.html'>Previous</a> <a href='w10_block_ui.html'>Next</a> >> w10_block_ui</div>
+<br />結果 << <a href='結果.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
