--- a/config/content.htm
+++ b/config/content.htm
@@ -129,7 +129,8 @@ print("done")</pre>
 <p><span>利用隨身程式系統編譯 </span><a href="https://github.com/mdecourse/scarysim">https://github.com/mdecourse/scarysim</a><span><span> </span>中的 SCARA robot 模擬系統. 完成此 Qt C++ 程式碼的編譯與操作後, 接著請完成 CoppeliaSim 範例中<span> </span></span><a href="https://github.com/CoppeliaRobotics/models/blob/master/robots/non-mobile/MTB%20robot.ttm">MTB robot</a><span><span> </span>所進行的<span> </span></span><a href="https://www.youtube.com/results?search_query=mtb+robot">Pick and Place demo</a><span>.</span></p>
 <p>完成結果</p>
 <p><img alt="" height="509" src="/images/w7.png" width="900"/></p>
-<h1>w10_block_ui</h1>
+<h1>w10</h1>
+<h2>w10_block_ui</h2>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
 // 每一個影片要有獨特的 data-varname 變數名稱
@@ -144,8 +145,7 @@ var winkVideoData_w10_block_ui = {
 </script>
 <!-- 將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
-<source src="/downloads/w10.mp4" type="video/mp4"/></video></div>
-<h1>blog上傳wink</h1>
+<source src="/downloads/w10.mp4" type="video/mp4"/></video></div><h1>blog_add_wink</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"&gt;
 &lt;script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"&gt;&lt;/script&gt;
 &lt;script&gt;
@@ -159,8 +159,7 @@ var winkVideoData_w10_block_ui = {
 };
 &lt;/script&gt;
 &lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
-&lt;source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre>
-<h1>uarm(NX)</h1>
+&lt;source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre><h1>uarm(NX)</h1>
 <p>軸承支撐圈</p>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
