--- a/content/小組連結.html
+++ b/content/小組連結.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li><a href='w10_block_ui.html'>w10_block_ui</a><li><a href='blog上傳wink.html'>blog上傳wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
                       </ul>
                 </nav>
               </div>
