--- a/content/NXOpen Python.html
+++ b/content/NXOpen Python.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>NXOpen Python</h1>
+    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>NXOpen Python</h1>
 <h4>於NX內建立繪製群組</h4>
 <script>
 var w12_task = {
@@ -173,7 +173,8 @@ var w12_task2 = {
 <div class="winkVideoContainerClass"></div>
 <script></script>
 <p>心得:</p>
-<p>當你完全了解NX這套軟體時,會發現其內部有許多可以自定義的功能,可以將編寫完成的繪製程式碼導入NX,使其執行,可免除重複零件之繪製時間。也可以透過程式碼來控制多個零件尺寸,減少所需繪製的時間。</p><br />w12 << <a href='w12.html'>Previous</a> </div>
+<p>當你完全了解NX這套軟體時,會發現其內部有許多可以自定義的功能,可以將編寫完成的繪製程式碼導入NX,使其執行,可免除重複零件之繪製時間。也可以透過程式碼來控制多個零件尺寸,減少所需繪製的時間。</p>
+<br />w12 << <a href='w12.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
