--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -145,7 +145,8 @@ var winkVideoData_w10_block_ui = {
 </script>
 <!-- 將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
-<source src="/downloads/w10.mp4" type="video/mp4"/></video></div><h1>blog上傳wink</h1>
+<source src="/downloads/w10.mp4" type="video/mp4"/></video></div>
+<h1>blog_add_wink</h1>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&lt;link rel="stylesheet" type="text/css" href="./../cmsimde/static/winkPlayer.css"&gt;
 &lt;script type="text/javascript" src="./../cmsimde/static/winkPlayer.js"&gt;&lt;/script&gt;
 &lt;script&gt;
@@ -558,3 +559,17 @@ var w12_task2 = {
 <script></script>
 <p>心得:</p>
 <p>當你完全了解NX這套軟體時,會發現其內部有許多可以自定義的功能,可以將編寫完成的繪製程式碼導入NX,使其執行,可免除重複零件之繪製時間。也可以透過程式碼來控制多個零件尺寸,減少所需繪製的時間。</p>
+<h1>w13</h1>
+<p>CoppeliaSim於最近推出了rev3,將附加程式的使用與法新增python,所以這周主題是修改導入python程式位置,運行<span>CoppeliaSim內的範例--simplePythonExample.ttt,讓其可使用python程式運作。</span></p>
+<script>
+var winkVideoData_w13 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w13" height="630" muted="true" width="1008"><source src="/downloads/w13.mp4" type="video/mp4"/></video></div>
