--- a/content/w13.html
+++ b/content/w13.html
@@ -139,8 +139,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3_NXvideo << <a href='w3_NXvideo.html'>Previous</a> <a href='NXOpen Python.html'>Next</a> >> NXOpen Python<br /><h1>w12</h1>
-<br />w3_NXvideo << <a href='w3_NXvideo.html'>Previous</a> <a href='NXOpen Python.html'>Next</a> >> NXOpen Python</div>
+    <div id="tipue_search_content">NXOpen Python << <a href='NXOpen Python.html'>Previous</a> <br /><h1>w13</h1>
+<p>CoppeliaSim於最近推出了rev3,將附加程式的使用與法新增python,所以這周主題是修改導入python程式位置,運行<span>CoppeliaSim內的範例--simplePythonExample.ttt,讓其可使用python程式運作。</span></p>
+<script>
+var winkVideoData_w13 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w13" height="630" muted="true" width="1008"><source src="./../downloads/w13.mp4" type="video/mp4"/></video></div><br />NXOpen Python << <a href='NXOpen Python.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
