--- a/content/w3_NXvideo.html
+++ b/content/w3_NXvideo.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">uarm(NX) << <a href='uarm(NX).html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w3_NXvideo</h1>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w3_NXvideo</h1>
 <h4>video13</h4>
 <p>參考工程圖利用NX繪製</p>
 <p>工程圖:</p>
@@ -287,7 +287,7 @@ var winkVideoData4 = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<br />uarm(NX) << <a href='uarm(NX).html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
