--- a/content/w8.html
+++ b/content/w8.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='uarm(NX).html'>uarm(NX)</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">blog_add_wink << <a href='blog_add_wink.html'>Previous</a> <a href='w3_NXvideo.html'>Next</a> >> w3_NXvideo<br /><h1>uarm(NX)</h1>
+    <div id="tipue_search_content">blog_add_wink << <a href='blog_add_wink.html'>Previous</a> <a href='w3_NXvideo.html'>Next</a> >> w3_NXvideo<br /><h1>w8</h1>
+<h4>uarm(NX)</h4>
 <p>軸承支撐圈</p>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
@@ -352,8 +353,7 @@ var winkVideoData_uarm_m13 = {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe></p>
 <p></p>
 <p>零件.組合下載</p>
-<p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p>
-<br />blog_add_wink << <a href='blog_add_wink.html'>Previous</a> <a href='w3_NXvideo.html'>Next</a> >> w3_NXvideo</div>
+<p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p><br />blog_add_wink << <a href='blog_add_wink.html'>Previous</a> <a href='w3_NXvideo.html'>Next</a> >> w3_NXvideo</div>
         
     <!-- footer -->
       <div class="container">
