--- a/content/w14.html
+++ b/content/w14.html
@@ -139,9 +139,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='小組連結.html'>Next</a> >> 小組連結<br /><h1>倉儲建立</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zSRADS3GmZI" width="560"></iframe></p>
-<br />About << <a href='About.html'>Previous</a> <a href='小組連結.html'>Next</a> >> 小組連結</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <br /><h1>w14</h1>
+<p><span>分別使用鍵盤及設置馬達參數來控制 MTB_nx robot: </span></p>
+<script>
+var winkVideoData_w14 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w14" height="630" muted="true" width="1008"><source src="./../downloads/w14.mp4" type="video/mp4"/></video></div><br />w13 << <a href='w13.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
