--- a/config/content.htm
+++ b/config/content.htm
@@ -375,7 +375,8 @@ var winkVideoData_uarm_m13 = {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tea380SZo0Q" width="560"></iframe></p>
 <p></p>
 <p>零件.組合下載</p>
-<p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p><h1>w3_NXvideo</h1>
+<p><a href="https://drive.google.com/drive/folders/1OGLo98alZ8DD6xwSKtb2N1LZq6GTCLmJ?usp=sharing">uarm(NX)</a></p>
+<h1>w3_NXvideo</h1>
 <h4>video13</h4>
 <p>參考工程圖利用NX繪製</p>
 <p>工程圖:</p>
@@ -573,3 +574,17 @@ var winkVideoData_w13 = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w13" height="630" muted="true" width="1008"><source src="/downloads/w13.mp4" type="video/mp4"/></video></div>
+<h1>w14</h1>
+<p><span>分別使用鍵盤及設置馬達參數來控制 MTB_nx robot: </span></p>
+<script>
+var winkVideoData_w14 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w14" height="630" muted="true" width="1008"><source src="/downloads/w14.mp4" type="video/mp4"/></video></div>
