--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -161,7 +161,8 @@ var winkVideoData_w10_block_ui = {
 &lt;/script&gt;
 &lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
 &lt;source src="https://40923125.github.io/cd2022/downloads/w10.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre>
-<h1>uarm(NX)</h1>
+<h1>w8</h1>
+<h4>uarm(NX)</h4>
 <p>軸承支撐圈</p>
 <script>
 // 在 Javascript 標註內以兩個斜線加入單行註解
@@ -573,3 +574,17 @@ var winkVideoData_w13 = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w13" height="630" muted="true" width="1008"><source src="/downloads/w13.mp4" type="video/mp4"/></video></div>
+<h1>w14</h1>
+<p><span>使用鍵盤控制 MTB_nx robot (for CoppeliaSim 4.3.0):</span></p>
+<script>
+var winkVideoData_w14 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w14" height="630" muted="true" width="1008"><source src="/downloads/w14.mp4" type="video/mp4"/></video></div>
