--- a/content/w13.html
+++ b/content/w13.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a></li>
+                     <li><a href='About.html'>About</a><li><a href='倉儲建立.html'>倉儲建立</a><li class='has-children'><a href='小組連結.html'>小組連結</a><ul class='dropdown'><li><a href='建立方式.html'>建立方式</a><li><a href='結果.html'>結果</a></li></ul><li><a href='每周進度.html'>每周進度</a><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='w10_block_ui.html'>w10_block_ui</a></li></ul><li><a href='blog_add_wink.html'>blog_add_wink</a><li><a href='w8.html'>w8</a><li><a href='w3_NXvideo.html'>w3_NXvideo</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='NXOpen Python.html'>NXOpen Python</a></li></ul><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">NXOpen Python << <a href='NXOpen Python.html'>Previous</a> <br /><h1>w13</h1>
+    <div id="tipue_search_content">NXOpen Python << <a href='NXOpen Python.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w13</h1>
 <p>CoppeliaSim於最近推出了rev3,將附加程式的使用與法新增python,所以這周主題是修改導入python程式位置,運行<span>CoppeliaSim內的範例--simplePythonExample.ttt,讓其可使用python程式運作。</span></p>
 <script>
 var winkVideoData_w13 = {
@@ -152,7 +152,8 @@ var winkVideoData_w13 = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w13" height="630" muted="true" width="1008"><source src="./../downloads/w13.mp4" type="video/mp4"/></video></div><br />NXOpen Python << <a href='NXOpen Python.html'>Previous</a> </div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w13" height="630" muted="true" width="1008"><source src="./../downloads/w13.mp4" type="video/mp4"/></video></div>
+<br />NXOpen Python << <a href='NXOpen Python.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
