--- a/config/content.htm
+++ b/config/content.htm
@@ -588,3 +588,22 @@ var winkVideoData_w14 = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w14" height="630" muted="true" width="1008"><source src="/downloads/w14.mp4" type="video/mp4"/></video></div>
+<h1>w16</h1>
+<p>    於<a href="https://mde.tw/cd2022_guide/content/w16.html">課程網頁w16</a>下載<a href="https://mde.tw/cd2022_guide/downloads/w15_uarm_tkinter_control.7z">w15_uarm_tkinter_control.7z</a>、<a href="https://mde.tw/cd2022_guide/downloads/w15_rotating_cuboid.7z">w15_rotating_cuboid.7z</a>、<a href="https://mde.tw/cd2022_guide/downloads/rotating_cuboid_flask.7z">rotating_cuboid_flask.7z</a>三個壓縮檔並解壓縮。</p>
+<p>1.遠端控制uarm</p>
+<p>   (1)用coppeliaSim開啟tkinter_control內的uarm_nx_tkinter_gui_control.ttt或</p>
+<p>        uarm_nx_tkinter_gui_control_exhaustive.simscene.xml並開始模擬</p>
+<p>   (2)利用SciTE開啟uarm_tkinter_control.py並執行會跳出下圖視窗</p>
+<p>       <img caption="false" height="198" src="/images/uarm_co.png" width="400"/></p>
+<p><span>   (3)點擊To connect後將連結coppeliaSim模擬uarm的控制面板,使其可利用此程式進行</span></p>
+<p><span>       遠端操作。</span></p>
+<p><span></span>       <iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u3qdW_f9EA8" width="560"></iframe></p>
+<p><span>3.遠端觀看</span><span>cuboid模擬</span></p>
+<p>如先前有操作<span>遠端控制uarm,因使用相同伺服器,需先結束伺服器的使用,才能操作。</span></p>
+<p>    (1)<span>用coppeliaSim開啟</span>rotating_cuboid內的rotating_cuboid.ttt</p>
+<p>    (2)<span>利用SciTE開啟rotating_cuboid.py並執行會跳出兩個視窗,可由攝影機視角觀看物件</span></p>
+<p><span>        模擬</span></p>
+<p>        <img alt="" height="270" src="/images/近端不啟動cop模擬.png" width="500"/></p>
+<p>        如要觀看網頁版則<span>利用SciTE開啟rotating_cuboid.py執行,將會於</span></p>
+<p><span>         <a href="http://127.0.0.1:5000">http://127.0.0.1:5000</a>顯示攝影機視角之畫面,可點擊左下連結切換攝影機</span></p>
+<p><span></span>         <img caption="false" height="398" src="/images/網頁方塊.png" width="500"/></p>
