--- a/content/Visualization_Stream.html
+++ b/content/Visualization_Stream.html
@@ -2,7 +2,7 @@
         <head>
         <title>40923125 cd2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Visualization_Stream.html'>Next</a> >> Visualization_Stream<br /><h1>w16</h1>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='Visualization_Stream.html'>Next</a> >> Visualization_Stream</div>
+    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='rotating_cuboid.html'>Next</a> >> rotating_cuboid<br /><h1>Visualization_Stream</h1>
+<p>    於<a href="https://mde.tw/cd2022_guide/content/w16.html">課程網頁w16</a>下載<a href="https://mde.tw/cd2022_guide/downloads/w15_uarm_tkinter_control.7z">w15_uarm_tkinter_control.7z</a>、<a href="https://mde.tw/cd2022_guide/downloads/w15_rotating_cuboid.7z">w15_rotating_cuboid.7z</a>、<a href="https://mde.tw/cd2022_guide/downloads/rotating_cuboid_flask.7z">rotating_cuboid_flask.7z</a>三個壓縮檔並解壓縮。</p>
+<p>1.遠端控制uarm</p>
+<p>   (1)用coppeliaSim開啟tkinter_control內的uarm_nx_tkinter_gui_control.ttt或</p>
+<p>        uarm_nx_tkinter_gui_control_exhaustive.simscene.xml並開始模擬</p>
+<p>   (2)利用SciTE開啟uarm_tkinter_control.py並執行會跳出下圖視窗</p>
+<p>       <img caption="false" height="198" src="./../images/uarm_co.png" width="400"/></p>
+<p><span>   (3)點擊To connect後將連結coppeliaSim模擬uarm的控制面板,使其可利用此程式進行</span></p>
+<p><span>       遠端操作。</span></p>
+<p><span></span>       <iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u3qdW_f9EA8" width="560"></iframe></p><br />w16 << <a href='w16.html'>Previous</a> <a href='rotating_cuboid.html'>Next</a> >> rotating_cuboid</div>
         
     <!-- footer -->
       <div class="container">
