--- a/content/rotating_cuboid.html
+++ b/content/rotating_cuboid.html
@@ -2,7 +2,7 @@
         <head>
         <title>40923125 cd2022</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,8 +139,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='Visualization_Stream.html'>Next</a> >> Visualization_Stream<br /><h1>w16</h1>
-<br />w14 << <a href='w14.html'>Previous</a> <a href='Visualization_Stream.html'>Next</a> >> Visualization_Stream</div>
+    <div id="tipue_search_content">Visualization_Stream << <a href='Visualization_Stream.html'>Previous</a> <br /><h1>rotating_cuboid</h1>
+<p><span>遠端觀看</span><span>cuboid模擬</span></p>
+<p>如先前有操作<span>遠端控制uarm,因使用相同伺服器,需先結束伺服器的使用,才能操作。</span></p>
+<p>    (1)<span>用coppeliaSim開啟</span>rotating_cuboid內的rotating_cuboid.ttt</p>
+<p>    (2)<span>利用SciTE開啟rotating_cuboid.py並執行會跳出兩個視窗,可由攝影機視角觀看物件</span></p>
+<p><span>        模擬</span></p>
+<p>        <img alt="" height="270" src="./../images/近端不啟動cop模擬.png" width="500"/></p>
+<p>        如要觀看網頁版則<span>利用SciTE開啟rotating_cuboid.py執行,將會於</span></p>
+<p><span>         <a href="http://127.0.0.1:5000">http://127.0.0.1:5000</a>顯示攝影機視角之畫面,可點擊左下連結切換攝影機</span></p>
+<p><span></span>         <img caption="false" height="398" src="./../images/網頁方塊.png" width="500"/></p>
+<p></p><br />Visualization_Stream << <a href='Visualization_Stream.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
